@@ -1,4 +1,5 @@
 Changes since revision 287:
+*Reading of new text in dos console windows is again much improved.
 *NVDA no longer crashes when pressing control+c in dos console windows.
 *the speed in which NVDA Loads documents in mozilla gecko windows (such as in Firefox) is now more than doubled.
 Example: it used to take around 8 seconds to load www.anz.com but now it takes only 3.
